--- a/initialyzor.cfg.sample
+++ b/initialyzor.cfg.sample
@@ -62,7 +62,7 @@ var=src,p2p
 
 [masksystempro]
 root=mydoc,mysrc,sex
-var=mail,web
+var=p2p,mail,web
 medias=photos,games
 
 #─────────────────────────────────────────────────────────────────
@@ -93,3 +93,14 @@ permissions=2775
 share_location="/home/taverne"
 group_name=locaux
 group_id=2000
+
+#─────────────────────────────────────────────────────────────────
+# Various sources
+#─────────────────────────────────────────────────────────────────
+[src]
+solarized=git://github.com/altercation/solarized.git
+auto-fu.zsh=git://github.com/ludovig/auto-fu.zsh.git
+zsh-syntax-highlighting=git://github.com/zsh-users/zsh-syntax-highlighting.git
+symfttpd=git://github.com/laurentb/symfttpd.git
+symfony1=git://github.com/symfony/symfony1.git
+
