--- a/initializor.cfg.sample
+++ b/initializor.cfg.sample
@@ -47,8 +47,10 @@ root_location=/home/ludo
 # Various sources
 #─────────────────────────────────────────────────────────────────
 [src]
-solarized=git://github.com/altercation/solarized.git
 auto-fu.zsh=git://github.com/ludovig/auto-fu.zsh.git
-zsh-syntax-highlighting=git://github.com/zsh-users/zsh-syntax-highlighting.git
-symfttpd=git://github.com/laurentb/symfttpd.git
-symfony1=git://github.com/symfony/symfony1.git
+initializor=git://github.com/ludovig/initializor.git
+confz=git://github.com/ludovig/confz.git
+[src_destination]
+auto-fu.zsh=sys
+initializor=sys
+confz=sys
