--- a/initializor.cfg.sample
+++ b/initializor.cfg.sample
@@ -54,3 +54,21 @@ confz=git://github.com/ludovig/confz.git
 auto-fu.zsh=sys
 initializor=sys
 confz=sys
+
+#─────────────────────────────────────────────────────────────────
+# Links
+#─────────────────────────────────────────────────────────────────
+[links]
+# zsh
+zsh/zshalias=$HOME/.zshalias
+zsh/zshenv=$HOME/.zshenv
+zsh/zshcompsys=$HOME/.zshcompsys
+zsh/functions=$HOME/.zshfunctions
+zsh/zshoptions=$HOME/.zshoptions
+zsh/zshparam=$HOME/.zshparam
+zsh/zshprompt=$HOME/.zshprompt
+zsh/zshrc=$HOME/.zshrc
+zsh/zshzle=$HOME/.zshzle
+[links_location]
+zsh=etc
+
