--- a/initializor.share.cfg.sample
+++ b/initializor.share.cfg.sample
@@ -3,24 +3,25 @@
 #─────────────────────────────────────────────────────────────────
 # Directories names
 [names]
-bak=grenier
-bittorrent=torrents
-chess=794_echecs
-db=bases
+mysrc=atelier
 doc=bibliotheque
-emule=mule
+sex=boudoir
+mydoc=bureau
 sys=garage
-etc=confz
-games=jeux
+bak=grenier
+net=hall
 img=galerie
 medias=salon
-musics=musique
-mydoc=bureau
-mysrc=atelier
+chess=794_echecs
 photos=album
-net=hall
 videos=cinema
-sex=boudoir
+games=jeux
+musics=musique
+db=bases
+etc=confz
+bittorrent=torrents
+emule=mule
+src=sources
 
 # Tree
 [nodes]
@@ -29,10 +30,10 @@ root=bak,doc,sys,img,net,medias,mydoc,mysrc,sex
 light=etc,src
 
 # second level
-net=web,p2p,src,mail
+net=web,p2p,mail
 medias=musics,videos,games,photos
 doc=chess
-sys=etc
+sys=etc,src
 
 # third level
 p2p=emule,bittorrent
@@ -40,7 +41,7 @@ p2p=emule,bittorrent
 # Local specific
 [local]
 ignore=mydoc,mysrc,sex, p2p, web, mail, etc
-root_location=/home/plop
+root_location=/home/taverne
 group_id=2000
 group_name=locaux
 owner=ludo
@@ -54,3 +55,10 @@ auto-fu.zsh=git://github.com/hchbaw/auto-fu.zsh.git
 zsh-syntax-highlighting=git://github.com/zsh-users/zsh-syntax-highlighting.git
 symfttpd=git://github.com/laurentb/symfttpd.git
 symfony1=git://github.com/symfony/symfony1.git
+
+#─────────────────────────────────────────────────────────────────
+# Location of some created local zsh files
+#─────────────────────────────────────────────────────────────────
+[localpath]
+bookmarks_file=$HOME/.zshbookmarks
+paths_file=$HOME/.zshpaths
