--- a/initializor.cfg.sample
+++ b/initializor.cfg.sample
@@ -48,6 +48,10 @@ root_location=/home/ludo
 # Links
 #─────────────────────────────────────────────────────────────────
 [links]
+# xorg
+xorg/xinitrc=$HOME/.xinitrc
+xorg/xsession=$HOME/.xsession
+xorg/Xresources=$HOME/.Xresources
 # zsh
 zsh/zshalias=$HOME/.zshalias
 zsh/zshenv=$HOME/.zshenv
@@ -58,9 +62,6 @@ zsh/zshparam=$HOME/.zshparam
 zsh/zshprompt=$HOME/.zshprompt
 zsh/zshrc=$HOME/.zshrc
 zsh/zshzle=$HOME/.zshzle
-xorg/xinitrc=$HOME/.xinitrc
-xorg/xinitrc=$HOME/.xsessions
-xorg/Xresources=$HOME/.Xresources
 [links_location]
 zsh=etc
 
