--- a/initializor.cfg.sample
+++ b/initializor.cfg.sample
@@ -49,7 +49,7 @@ vim/vim=$HOME/.vim
 vim/vimrc=$HOME/.vimrc
 # xorg
 xorg/xinitrc=$HOME/.xinitrc
-home/.xinitrc=$HOME/.xprofile
+xorg/xinitrc=$HOME/.xprofile
 xorg/Xresources=$HOME/.Xresources
 # xplanet
 xplanet=$HOME/.xplanet
@@ -69,6 +69,12 @@ git/gitconfig=$HOME/.gitconfig
 #vim
 vundle=$HOME/.vim/bundle/vundle
 fzf=$HOME/.fzf
+#i3
+i3/config=$HOME/.config/i3/config
+i3/i3status.config=$HOME/.config/i3status/config
+#devilspie
+devilspie/opacity.ds=$HOME/.devilspie/opacity.ds
+
 [links_location]
 vimboard=sys
 vundle=src
