Remove share stuff

--- a/initializor.cfg.sample.ini
+++ b/initializor.cfg.sample.ini
@@ -1,12 +1,9 @@
 #─────────────────────────────────────────────────────────────────
-# Directories hierarchy
+# Directories tree hierarchy
 #─────────────────────────────────────────────────────────────────
 # Local specific
-[local]
-root_label=light
-#root_location=/home/ludo
-#ignore=doc,src,db,musics,videos,games
-#root_name=maison
+[tree]
+root_label=full
 
 # Directories names
 [names]
@@ -17,19 +14,17 @@ sys=garage
 bak=grenier
 net=hall
 medias=salon
-photos=album
-src=sources
+photos=photos
 etc=confz
-p2p=p2p
+src=sources
 
 # Tree
 [nodes]
 # first level
-root=workshop,doc,img,sys,bak,net,medias
-light=workshop,doc,sys
+full=workshop,doc,img,sys,bak,net,medias
+light=workshop,doc,sys,img,net
 
 # second level
-net=p2p
 medias=photos
 sys=etc,src
 
@@ -94,9 +89,6 @@ auto-fu.zsh=sys
 initializor=sys
 confz=sys
 vimboard=sys
-
-[src_bin]
-initializor
 
 #─────────────────────────────────────────────────────────────────
 # Location of some created local zsh files
