Use light as default

--- a/initializor.sample.ini
+++ b/initializor.sample.ini
@@ -3,7 +3,7 @@
 #─────────────────────────────────────────────────────────────────
 # Local specific
 [tree]
-root_label=full
+root_label=light
 
 # Directories names
 [names]
@@ -22,7 +22,7 @@ src=sources
 [nodes]
 # first level
 full=workshop,doc,img,sys,bak,net,medias
-light=workshop,doc,sys,img,net
+light=workshop,doc,sys
 
 # second level
 medias=photos
