Some error detection on init-links

--- a/initializor.sample.ini
+++ b/initializor.sample.ini
@@ -51,7 +51,7 @@ zsh/functions=$HOME/.zshfunctions
 zsh/zlogin=$HOME/.zlogin
 zsh/zshalias=$HOME/.zshalias
 zsh/zshcompsys=$HOME/.zshcompsys
-zsh/zshenv=$HOME/.zshenv
+#zsh/zshenv=$HOME/.zshenv
 zsh/zshoptions=$HOME/.zshoptions
 zsh/zshparam=$HOME/.zshparam
 zsh/zshprompt=$HOME/.zshprompt
@@ -60,8 +60,8 @@ zsh/zshzle=$HOME/.zshzle
 #git
 git/gitconfig=$HOME/.gitconfig
 #vim
-vundle=$HOME/.vim/bundle/vundle
-fzf=$HOME/.fzf
+#vundle=$HOME/.vim/bundle/vundle
+#fzf=$HOME/.fzf
 #i3
 i3/config=$HOME/.config/i3/config
 i3/i3status.config=$HOME/.config/i3status/config
@@ -69,24 +69,23 @@ i3/i3status.config=$HOME/.config/i3status/config
 devilspie/opacity.ds=$HOME/.devilspie/opacity.ds
 
 [links_location]
-vimboard=sys
-vundle=src
-fzf=src
+vimboard=src
+#vundle=src
+#fzf=src
 
 #─────────────────────────────────────────────────────────────────
 # Various sources
 #─────────────────────────────────────────────────────────────────
 [src]
-auto-fu.zsh=https://github.com/ludovig/auto-fu.zsh.git
+#auto-fu.zsh=https://github.com/ludovig/auto-fu.zsh.git
 vimboard=https://github.com/ludovig/vimboard.git
 confz=https://github.com/ludovig/confz.git
-vundle=https://github.com/VundleVim/Vundle.vim.git
-fzf=https://github.com/junegunn/fzf.git
+#vundle=https://github.com/VundleVim/Vundle.vim.git
+#fzf=https://github.com/junegunn/fzf.git
 [src_destination]
-auto-fu.zsh=sys
-initializor=sys
+#auto-fu.zsh=sys
+#initializor=sys
 confz=sys
-vimboard=sys
 
 #─────────────────────────────────────────────────────────────────
 # Location of some created local zsh files
