--- a/initializor.sample.ini
+++ b/initializor.sample.ini
@@ -60,7 +60,7 @@ zsh/zshzle=$HOME/.zshzle
 #git
 git/gitconfig=$HOME/.gitconfig
 #vim
-#vundle=$HOME/.vim/bundle/vundle
+vundle=$HOME/.vim/bundle/Vundle.vim
 #fzf=$HOME/.fzf
 #i3
 i3/config=$HOME/.config/i3/config
@@ -70,7 +70,7 @@ devilspie/opacity.ds=$HOME/.devilspie/opacity.ds
 
 [links_location]
 vimboard=src
-#vundle=src
+vundle=src
 #fzf=src
 
 #─────────────────────────────────────────────────────────────────
@@ -80,7 +80,7 @@ vimboard=src
 #auto-fu.zsh=https://github.com/ludovig/auto-fu.zsh.git
 vimboard=https://github.com/ludovig/vimboard.git
 confz=https://github.com/ludovig/confz.git
-#vundle=https://github.com/VundleVim/Vundle.vim.git
+vundle=https://github.com/VundleVim/Vundle.vim.git
 #fzf=https://github.com/junegunn/fzf.git
 [src_destination]
 #auto-fu.zsh=sys
